// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableCard component ExpandableCard.List component closes the opened card 1`] = `
<div
  class="ExpandableCardList"
>
  <div
    class="item"
  >
    <div
      aria-label="Lorem ipsum"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="height: 0px; position: absolute; top: 0px; right: 0px; left: 0px; min-height: auto;"
    >
      <button
        aria-label="Close me"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-125 iconButtonStyles-medium-131 iconButtonStyles-text-127 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem ipsum
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 0"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-125 iconButtonStyles-medium-131 iconButtonStyles-text-127 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 0
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 1"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-125 iconButtonStyles-medium-131 iconButtonStyles-text-127 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 1
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 2"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-125 iconButtonStyles-medium-131 iconButtonStyles-text-127 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 2
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 3"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-125 iconButtonStyles-medium-131 iconButtonStyles-text-127 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 3
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component doesn't re-expand an expanded card 1`] = `
<div
  class="ExpandableCardList"
>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 0"
      class="MuiPaper-root MuiCard-root ExpandableCard ExpandableCard--expanded MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-106 iconButtonStyles-medium-112 iconButtonStyles-text-108 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            Lorem Ipsum 0
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 1"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-106 iconButtonStyles-medium-112 iconButtonStyles-text-108 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 1
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 2"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-106 iconButtonStyles-medium-112 iconButtonStyles-text-108 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 2
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 3"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-106 iconButtonStyles-medium-112 iconButtonStyles-text-108 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 3
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component handles multiple cards expanded by default 1`] = `
<div
  class="ExpandableCardList"
>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 0"
      class="MuiPaper-root MuiCard-root ExpandableCard ExpandableCard--expanded MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-68 iconButtonStyles-medium-74 iconButtonStyles-text-70 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            Lorem Ipsum 0
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 1"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-68 iconButtonStyles-medium-74 iconButtonStyles-text-70 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 1
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 2"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-68 iconButtonStyles-medium-74 iconButtonStyles-text-70 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 2
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 3"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-68 iconButtonStyles-medium-74 iconButtonStyles-text-70 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 3
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-68 iconButtonStyles-medium-74 iconButtonStyles-text-70 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component it renders a list of cards 1`] = `
<div
  class="ExpandableCardList"
>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 1"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-30 iconButtonStyles-medium-36 iconButtonStyles-text-32 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 1
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 2"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-30 iconButtonStyles-medium-36 iconButtonStyles-text-32 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 2
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 3"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-30 iconButtonStyles-medium-36 iconButtonStyles-text-32 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 3
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component renders with one card expanded 1`] = `
<div
  class="ExpandableCardList"
>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 0"
      class="MuiPaper-root MuiCard-root ExpandableCard ExpandableCard--expanded MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-49 iconButtonStyles-medium-55 iconButtonStyles-text-51 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            Lorem Ipsum 0
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 1"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-49 iconButtonStyles-medium-55 iconButtonStyles-text-51 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 1
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 2"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-49 iconButtonStyles-medium-55 iconButtonStyles-text-51 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 2
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 3"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-49 iconButtonStyles-medium-55 iconButtonStyles-text-51 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 3
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component ExpandableCard.List component sets the clicked card to expanded 1`] = `
<div
  class="ExpandableCardList"
>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 0"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="height: 0px; position: absolute; top: 0px; right: 0px; left: 0px; min-height: auto;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-87 iconButtonStyles-medium-93 iconButtonStyles-text-89 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 0
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
    style="min-width: 0px; height: 0px;"
  >
    <div
      aria-label="Lorem Ipsum 1"
      class="MuiPaper-root MuiCard-root ExpandableCard ExpandableCard--expanded MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="height: 0px; top: 0px; right: 0px; left: 0px;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-87 iconButtonStyles-medium-93 iconButtonStyles-text-89 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            Lorem Ipsum 1
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 2"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-87 iconButtonStyles-medium-93 iconButtonStyles-text-89 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 2
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="item"
  >
    <div
      aria-label="Lorem Ipsum 3"
      class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
      role="button"
      style="min-height: 100%;"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-87 iconButtonStyles-medium-93 iconButtonStyles-text-89 close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="MuiCardContent-root content"
      >
        <div
          class="header"
        >
          <svg
            class="icon"
          />
          <h5
            class="MuiTypography-root title title--static Typography MuiTypography-h5"
          >
            Lorem Ipsum 3
          </h5>
        </div>
        <div
          class="body"
        >
          Sit dolor amet
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component it expands the card when changing isExpanded 1`] = `
<div
  style="min-width: 0px; height: 0px;"
>
  <div
    aria-label="Lorem Ipsum"
    class="MuiPaper-root MuiCard-root ExpandableCard ExpandableCard--expanded MuiPaper-elevation1 MuiPaper-rounded"
    role="button"
    style="pointer-events: auto; height: 0px;"
  >
    <div
      class="MuiCardContent-root content"
    >
      <div
        class="header"
      >
        <svg
          class="icon"
        />
        <h5
          class="MuiTypography-root title Typography MuiTypography-h5"
        >
          Lorem Ipsum
        </h5>
      </div>
      <div
        class="body"
      >
        Sit dolor amet
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component it expands the card when changing isExpanded 2`] = `
<div
  style=""
>
  <div
    aria-label="Lorem Ipsum"
    class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
    role="button"
    style="pointer-events: auto; min-height: 100%;"
  >
    <div
      class="MuiCardContent-root content"
    >
      <div
        class="header"
      >
        <svg
          class="icon"
        />
        <h5
          class="MuiTypography-root title title--static Typography MuiTypography-h5"
        >
          Lorem Ipsum
        </h5>
      </div>
      <div
        class="body"
      >
        Sit dolor amet
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component it triggers an onAnimationEnd event 1`] = `
Array [
  Array [
    true,
  ],
]
`;

exports[`ExpandableCard component renders an expanded card 1`] = `
<div>
  <div
    aria-label="Lorem Ipsum"
    class="MuiPaper-root MuiCard-root ExpandableCard ExpandableCard--expanded MuiPaper-elevation1 MuiPaper-rounded"
    role="button"
    style="min-height: 100%; pointer-events: auto;"
  >
    <div
      class="MuiCardContent-root content"
    >
      <div
        class="header"
      >
        <svg
          class="icon"
        />
        <h5
          class="MuiTypography-root title Typography MuiTypography-h5"
        >
          Lorem Ipsum
        </h5>
      </div>
      <div
        class="body"
      >
        Sit dolor amet
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component renders correctly 1`] = `
<div>
  <div
    aria-label="Lorem Ipsum"
    class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
    role="button"
    style="min-height: 100%; pointer-events: auto;"
  >
    <div
      class="MuiCardContent-root content"
    >
      <div
        class="header"
      >
        <svg
          class="icon"
        />
        <h5
          class="MuiTypography-root title title--static Typography MuiTypography-h5"
        >
          Lorem Ipsum
        </h5>
      </div>
      <div
        class="body"
      >
        Sit dolor amet
      </div>
      <div
        class="footer"
      >
        consectetur adipiscing elit
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpandableCard component renders with no footer 1`] = `
<div>
  <div
    aria-label="Lorem Ipsum"
    class="MuiPaper-root MuiCard-root ExpandableCard MuiPaper-elevation1 MuiPaper-rounded"
    role="button"
    style="min-height: 100%; pointer-events: auto;"
  >
    <div
      class="MuiCardContent-root content"
    >
      <div
        class="header"
      >
        <svg
          class="icon"
        />
        <h5
          class="MuiTypography-root title title--static Typography MuiTypography-h5"
        >
          Lorem Ipsum
        </h5>
      </div>
      <div
        class="body"
      >
        Sit dolor amet
      </div>
    </div>
  </div>
</div>
`;
